--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
                 <section aria-label="Create" class="service">
                   <h3 class="service__heading">
                     <span class="service__heading__content">
-                      <span class="service__heading__content__text">Build<br>Connected<br>Services</span>
+                      <span class="service__heading__content__text">Build<br>Integrated<br>Services</span>
                     </span>
                   </h3>
                   <p class="service__description">REST APIs & Webhooks</p>
                   <ul aria-label="Processing Automation" class="service__list" role="list">
                     <li class="service__list__item"><a href="https://zapier.com" target="_blank" rel="nofollow"><img src="img/zapier_logo.svg" width="25%"/></a><br/>or<br/><a href="https://www.ruby-lang.org" target="_blank" rel="nofollow"><img src="img/ruby_logo.svg" width="10%"/></a></li>
-                    <li class="service__list__item">Data + Process Automations</li>
+                    <li class="service__list__item">Process Automations</li>
                   </ul>
                 </section>
               </div>
@@ -124,12 +124,12 @@
             <section aria-label="Deliver" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Build<br>Customer<br>Engagements</span>
+                  <span class="service__heading__content__text">Build<br>Contact<br>Engagements</span>
                 </span>
               </h3>
-              <p class="service__description">Marketing & Transactional Campaigns</p>
+              <p class="service__description">Emails & SMS Campaigns</p>
               <ul aria-label="Messaging Automations" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://www.activecampaign.com" target="_blank" rel="nofollow"><img src="img/active_campaign_logo.svg" width="55%"/></a><br/>and<br/><a href="https://postmarkapp.com" target="_blank" rel="nofollow"><img src="img/postmark-logo.svg" width="40%"/></a></li>
+                <li class="service__list__item"><a href="https://postmarkapp.com" target="_blank" rel="nofollow"><img src="img/postmark-logo.svg" width="40%"/></a><br/>and<br/><a href="https://textit.com" target="_blank" rel="nofollow"><img src="img/textit-logo.svg" width="40%"/></a></li>
                 <li class="service__list__item">Message Automations</li>
               </ul>
             </section>
@@ -139,51 +139,20 @@
             <section aria-label="Deliver" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Build<br>Visualised<br>Metrics</span>
-                </span>
-              </h3>
-              <p class="service__description">Dashboards & Documents</p>
-              <ul aria-label="Reporting Automations" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://www.klipfolio.com" target="_blank" rel="nofollow"><img src="img/klipfolio_logo.svg" width="27%"/></a><br/>or<br/><a href="https://quickchart.io/" target="_blank" rel="nofollow"><img src="img//quickchart_logo.png" width="37%"/></a></li>
-                <li class="service__list__item">Report Automations</li>
-              </ul>
-            </section>
-          </div>
-
-        </div>
-      </div>
-
-      <div class="what-we-do__services-layout">
-        <div class="what-we-do__services-layout__row">
-    <!--      -->  
-
-       <div class="what-we-do__services-layout__column">
-            <section aria-label="Create" class="service">
-            </section>
-        </div>
-
-          <div class="what-we-do__services-layout__column">
-            <section aria-label="Create" class="service">
-              <h3 class="service__heading">
-                <span class="service__heading__content">
-                  <span class="service__heading__content__text">Build<br>Internet<br>of<br>Things</span>
+                  <span class="service__heading__content__text">Build<br>Internet of<br>Things</span>
                 </span>
               </h3>
               <p class="service__description">Apps, Actuators & Sensors</p>
               <ul aria-label="Controlling Automation" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" width="10%"/></a><br/>and<br/><a href="https://www.waveshare.com/product/raspberry-pi.htm" target="_blank" rel="nofollow"><img src="img/waveshare_logo.png" width="10%"/></a> + <a href="https://www.bluetooth.com/blog/the-web-bluetooth-series/" target="_blank" ><img src="img/bluetooth_logo.png" width="10%"/></a> +  <a href="https://www.prusa3d.com/category/original-prusa-mini/" target="_blank" rel="nofollow"><img src="img/prusa_logo.svg" width="15%"/></a></li>
+                <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" width="10%"/></a><br/>and<br/><a href="https://www.waveshare.com/product/raspberry-pi.htm" target="_blank" rel="nofollow"><img src="img/waveshare_logo.png" width="10%"/></a> + <a href="https://www.bluetooth.com/blog/the-web-bluetooth-series/" target="_blank" ><img src="img/bluetooth_logo.png" width="10%"/></a></li>
                 <li class="service__list__item">Control Automations</li>
               </ul>
             </section>
           </div>
 
-          <div class="what-we-do__services-layout__column">
-            <section aria-label="Create" class="service">
-            </section>
-          </div>
-
         </div>
       </div>
+
 
     </section>
 
