--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
             <section aria-label="Deliver" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Build<br>Contact<br>Engagements</span>
+                  <span class="service__heading__content__text">Build<br>Transactional<br>Campaigns</span>
                 </span>
               </h3>
-              <p class="service__description">Emails & SMS Campaigns</p>
+              <p class="service__description">Email & SMS</p>
               <ul aria-label="Messaging Automations" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://postmarkapp.com" target="_blank" rel="nofollow"><img src="img/postmark-logo.svg" width="40%"/></a><br/>and<br/><a href="https://textit.com" target="_blank" rel="nofollow"><img src="img/textit_logo.svg" width="30%"/></a></li>
                 <li class="service__list__item">Message Automations</li>
