--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <section aria-label="Create" class="service">
                   <h3 class="service__heading">
                     <span class="service__heading__content">
-                      <span class="service__heading__content__text">Build<br>Integrated<br>Microservices</span>
+                      <span class="service__heading__content__text">Build<br>Integrated<br>Services</span>
                     </span>
                   </h3>
                   <p class="service__description">REST APIs & Webhooks</p>
@@ -124,7 +124,7 @@
             <section aria-label="Deliver" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Build<br>Multi-channel<br>Notifications</span>
+                  <span class="service__heading__content__text">Build<br>Notification<br>Channels</span>
                 </span>
               </h3>
               <p class="service__description">Email, SMS, Push & Chat</p>
