--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               <p class="service__description">Controllers, Actuators & Sensors</p>
               <ul aria-label="Controlling Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" width="10%"/></a><br/>and<br/><a href="https://www.waveshare.com/product/raspberry-pi.htm" target="_blank" rel="nofollow"><img src="img/waveshare_logo.png" width="10%"/></a> + <a href="https://www.bluetooth.com/blog/the-web-bluetooth-series/" target="_blank" ><img src="img/bluetooth_logo.png" width="10%"/></a> + <a href="https://micropython.org" target="_blank" ><img src="img/micropython_logo.png" width="8%"/></a></li>
-                <li class="service__list__item">Control Automations</li>
+                <li class="service__list__item">Telemetry Automations</li>
               </ul>
             </section>
           </div>
