--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
             <section aria-label="1" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Build<br>Integrated<br>Services</span>
+                  <span class="service__heading__content__text">Build<br>Process<br>Automations</span>
                 </span>
               </h3>
               <p class="service__description">REST APIs & Webhooks</p>
               <ul aria-label="Processing Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://zapier.com" target="_blank" rel="nofollow"><img style="padding-top: 20px" src="img/zapier_logo.png" width="30%"/></a><br/>or<br/><a href="https://www.ruby-lang.org" target="_blank" rel="nofollow"><img src="img/ruby_logo.svg" width="10%"/></a> + <a href="https://www.heroku.com" target="_blank" ><img src="img/heroku_logo.png" width="7%"/></a> / <a href="https://dokku.com" target="_blank" ><img src="img/dokku_logo.svg" width="10%"/></a></li>
-                <li class="service__list__item">Process Automations</li>
+                <li class="service__list__item">Integrated Services</li>
               </ul>
             </section>
           </div>
@@ -123,13 +123,13 @@
             <section aria-label="2" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Build<br>Internet of<br>Things</span>
+                  <span class="service__heading__content__text">Build<br>Telemetry<br>Automations</span>
                 </span>
               </h3>
               <p class="service__description">Controllers, Actuators & Sensors</p>
               <ul aria-label="Controlling Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" width="10%"/></a><br/>and<br/><a href="https://www.waveshare.com/product/raspberry-pi.htm" target="_blank" rel="nofollow"><img src="img/waveshare_logo.png" width="10%"/></a> + <a href="https://www.bluetooth.com/blog/the-web-bluetooth-series/" target="_blank" ><img src="img/bluetooth_logo.png" width="10%"/></a> + <a href="https://micropython.org" target="_blank" ><img src="img/micropython_logo.png" width="8%"/></a></li>
-                <li class="service__list__item">Telemetry Automations</li>
+                <li class="service__list__item">Internet of Things</li>
               </ul>
             </section>
           </div>
