--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               </h3>
               <p class="service__description">REST APIs & Webhooks</p>
               <ul aria-label="Processing Automation" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://zapier.com" target="_blank" rel="nofollow"><img style="padding-top: 20px" src="img/zapier_logo.png" width="30%"/></a></li>
+                <li class="service__list__item"><a href="https://zapier.com" target="_blank" rel="nofollow"><img style="padding-top: 20px" src="img/zapier_logo.png" width="35%"/></a></br></li>
                 <li class="service__list__item">Integrated Services</li>
               </ul>
             </section>
@@ -128,7 +128,7 @@
               </h3>
               <p class="service__description">Controllers, Actuators & Sensors</p>
               <ul aria-label="Controlling Automation" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" width="10%"/></a></li>
+                <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" width="10%"/></br></a></li>
                 <li class="service__list__item">Internet of Things</li>
               </ul>
             </section>
@@ -144,7 +144,7 @@
               </h3>
               <p class="service__description">Automators & Bots</p>
               <ul aria-label="Machine Learning Automation" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://www.openai.com" target="_blank" rel="nofollow"><img src="img/openai_logo.svg" width="40%"/></a></li>
+                <li class="service__list__item"><a href="https://www.openai.com" target="_blank" rel="nofollow"><img src="img/openai_logo.svg" width="35%"/></br></a></li>
                 <li class="service__list__item">Image & Text Manipulators</li>
               </ul>
             </section>
