--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               <p class="service__description">REST APIs & Webhooks</p>
               <ul aria-label="Processing Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://zapier.com" target="_blank" rel="nofollow"><img style="padding-top: 20px" src="img/zapier_logo.png" width="35%"/></a></br></li>
-                <li class="service__list__item">Integrated Services</li>
+                <li class="service__list__item">Microservices</li>
               </ul>
             </section>
           </div>
@@ -145,7 +145,7 @@
               <p class="service__description">Automators & Bots</p>
               <ul aria-label="Machine Learning Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://www.openai.com" target="_blank" rel="nofollow"><img src="img/openai_logo.svg" width="35%"/></br></a></li>
-                <li class="service__list__item">Image & Text Manipulators</li>
+                <li class="service__list__item">Generated Images, Texts & Code</li>
               </ul>
             </section>
           </div>
