--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="hero__body">
         <h2 class="hero__subheading">👋 Hello, I’m Arnold Tonderai Marunda.</h2>
         <div class="hero__text">
-          <p class="hero__intro">✝️ Believer of Jesus Christ. ♂♀ Married - Father of 5 kids. 📚 Lifelong Learner. 🍏 Alternative Educator. 💻 Tech Solopreneur</p>
+          <p class="hero__intro">✝️ Follower of Jesus Christ. ♂♀ Married - Father of 5 kids. 📚 Lifelong Learner. 🍏 Alternative Educator. 💻 Tech Solopreneur</p>
         </div>
       </div>
     </section>
