--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               </h3>
               <p class="service__description">REST APIs & Webhooks</p>
               <ul aria-label="Processing Automation" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://zapier.com" target="_blank" rel="nofollow"><img style="padding-top: 20px" src="img/zapier_logo.png" width="35%"/></a></br></li>
+                <li class="service__list__item"><a href="https://zapier.com" target="_blank" rel="nofollow"><img style="padding-top: 20px" src="img/zapier_logo.png" width="35%"/></a></br>or</br><a href="https://skyvia.com" target="_blank" rel="nofollow"><img style="padding-top: 20px" src="img/skyvia.png" width="35%"/></a></li>
                 <li class="service__list__item">Microservices</li>
               </ul>
             </section>
