--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               </h3>
               <p class="service__description">Controllers, Actuators & Sensors</p>
               <ul aria-label="Controlling Automation" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" width="10%"/></br></a></li>
+                <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" width="10%"/></a></br>and</br><a href="https://www.waveshare.com" target="_blank" rel="nofollow"><img src="img/waveshare_logo.png" width="10%"/></a></li>
                 <li class="service__list__item">Internet of Things</li>
               </ul>
             </section>
