--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
             <section aria-label="1" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Build<br>Process<br>Automations</span>
+                  <span class="service__heading__content__text">Process<br>Automations</span>
                 </span>
               </h3>
               <p class="service__description">REST APIs & Webhooks</p>
               <ul aria-label="Processing Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://zapier.com" target="_blank" rel="nofollow"><img style="padding-top: 20px" src="img/zapier_logo.png" width="35%"/></a></br>or</br><a href="https://skyvia.com" target="_blank" rel="nofollow"><img style="padding-top: 20px" src="img/skyvia.png" width="35%"/></a></li>
-                <li class="service__list__item">Microservices</li>
+                <li class="service__list__item">Building Microservices</li>
               </ul>
             </section>
           </div>
@@ -123,13 +123,13 @@
             <section aria-label="2" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Build<br>Telemetry<br>Automations</span>
+                  <span class="service__heading__content__text">Telemetry<br>Automations</span>
                 </span>
               </h3>
               <p class="service__description">Controllers, Actuators & Sensors</p>
               <ul aria-label="Controlling Automation" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" width="10%"/></a></br>and</br><a href="https://www.waveshare.com" target="_blank" rel="nofollow"><img src="img/waveshare_logo.png" width="10%"/></a></li>
-                <li class="service__list__item">Internet of Things</li>
+                <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" width="10%"/></a></br>and</br><a href="https://www.waveshare.com" target="_blank" rel="nofollow"><img src="img/waveshare_logo.png" width="15%"/></a></li>
+                <li class="service__list__item">Building Internet of Things</li>
               </ul>
             </section>
           </div>
@@ -139,13 +139,13 @@
             <section aria-label="2" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Build<br>AI<br>Automations</span>
+                  <span class="service__heading__content__text">AI<br>Automations</span>
                 </span>
               </h3>
               <p class="service__description">Automators & Bots</p>
               <ul aria-label="Machine Learning Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://www.openai.com" target="_blank" rel="nofollow"><img src="img/openai_logo.svg" width="35%"/></br></a></li>
-                <li class="service__list__item">Generated Images, Text & Code</li>
+                <li class="service__list__item">Building Generative(images, text & code) Scripts</li>
               </ul>
             </section>
           </div>
