--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               </h3>
               <p class="service__description">REST APIs & Webhooks</p>
               <ul aria-label="Processing Automation" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://zapier.com" target="_blank" rel="nofollow"><img style="padding-top: 20px" src="img/zapier_logo.png" width="35%"/></a></br>or</br><a href="https://skyvia.com" target="_blank" rel="nofollow"><img style="padding-top: 20px" src="img/skyvia.png" width="35%"/></a></li>
+                <li class="service__list__item"><a href="https://zapier.com" target="_blank" rel="nofollow"><img style="padding-top: 20px" src="img/zapier_logo.png" width="35%"/></a></br>or</br><a href="https://skyvia.com" target="_blank" rel="nofollow"><img style="padding-bottom: 20px" src="img/skyvia.png" width="35%"/></a></li>
                 <li class="service__list__item">Building Microservices</li>
               </ul>
             </section>
@@ -128,7 +128,7 @@
               </h3>
               <p class="service__description">Controllers, Actuators & Sensors</p>
               <ul aria-label="Controlling Automation" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" width="10%"/></a></br>and</br><a href="https://www.waveshare.com" target="_blank" rel="nofollow"><img src="img/waveshare_logo.png" width="15%"/></a></li>
+                <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img style="padding-top: 20px" src="img/raspberrypi_logo.svg" width="10%"/></a></br>and</br><a href="https://www.waveshare.com" target="_blank" rel="nofollow"><img src="img/waveshare_logo.png" style="padding-bottom: 20px" width="15%"/></a></li>
                 <li class="service__list__item">Building Internet of Things</li>
               </ul>
             </section>
@@ -144,7 +144,7 @@
               </h3>
               <p class="service__description">Automators & Bots</p>
               <ul aria-label="Machine Learning Automation" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://www.openai.com" target="_blank" rel="nofollow"><img src="img/openai_logo.svg" width="35%"/></br></a></li>
+                <li class="service__list__item"><a href="https://www.openai.com" target="_blank" rel="nofollow"><img src="img/openai_logo.svg" style="padding-top: 20px, padding-bottom: 20px" width="35%"/></br></a></li>
                 <li class="service__list__item">Building Generative(images, text & code) Scripts</li>
               </ul>
             </section>
