--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               </h3>
               <p class="service__description">Automators & Bots</p>
               <ul aria-label="Machine Learning Automation" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://www.openai.com" target="_blank" rel="nofollow"><img src="img/openai_logo.svg" style="padding-top: 20px, padding-bottom: 20px" width="35%"/></br></a></li>
+                <li class="service__list__item"><a href="https://www.openai.com" target="_blank" rel="nofollow"><img src="img/openai_logo.svg" style="padding-top: 20px; padding-bottom: 20px" width="35%"/></br></a></li>
                 <li class="service__list__item">Building Generative(images, text & code) Scripts</li>
               </ul>
             </section>
