--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
                   <span class="service__heading__content__text">AI<br>Automations</span>
                 </span>
               </h3>
-              <p class="service__description">Automators & Bots</p>
+              <p class="service__description">ChatGPT, Codex & DALL-E</p>
               <ul aria-label="Machine Learning Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://www.openai.com" target="_blank" rel="nofollow"><img src="img/openai_logo.svg" style="padding-top: 20px; padding-bottom: 20px" width="35%"/></br></a></li>
-                <li class="service__list__item">Building Generative(images, text & code) Scripts</li>
+                <li class="service__list__item">Building Generative(images, text & code) Bots</li>
               </ul>
             </section>
           </div>
