--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
       <h2 class="clients__heading" id="clients__heading">Recommended Tools</h2>
       <p class="about__text">Technologies and services that I like, use & recommend. <b class="message" style="color:#7713fe;"></b></p>
       <ul aria-labelledby="clients__heading" class="clients__list" role="list">
-         <li class="clients__list__item"><a href="https://www.giftupapp.com?fpr=1wf68" target="_blank" style="outline:none;border:none;"><img src="https://d2gdx5nv84sdx2.cloudfront.net/uploads/3dkzweqw/marketing_asset/banner/3217/Logo_Black_Yellow_White.png" style=" width:90%" alt="giftupApp" border="0"/>The simplest way to sell your business' gift cards online.</a></li>
-         <li class="clients__list__item"><a href="https://get.surfshark.net/aff_c?offer_id=926&aff_id=18085&file_id=379" target="_blank"><img src="https://media.go2speed.org/brand/files/surfshark/926/Surfshark_pos_96px.png" style=" width:90%" alt="surfsharkVPN" border="0" />Improve your online security & privacy with the award-winning VPN service.</a><img src="https://get.surfshark.net/aff_c?offer_id=926&aff_id=18085" width="0" height="0" style="position:absolute;visibility:hidden;" border="0" /></li> 
+         <li class="clients__list__item"><a href="https://www.giftupapp.com?fpr=1wf68" target="_blank" style="outline:none;border:none;"><img src="https://d2gdx5nv84sdx2.cloudfront.net/uploads/3dkzweqw/marketing_asset/banner/3217/Logo_Black_Yellow_White.png" style=" width:90%" alt="giftupApp" border="0"/></a><p>The simplest way to sell your business' gift cards online.</p></li>
+         <li class="clients__list__item"><a href="https://get.surfshark.net/aff_c?offer_id=926&aff_id=18085&file_id=379" target="_blank"><img src="https://media.go2speed.org/brand/files/surfshark/926/Surfshark_pos_96px.png" style=" width:90%" alt="surfsharkVPN" border="0" /></a><p>Improve your online security & privacy with the award-winning VPN service.</p><img src="https://get.surfshark.net/aff_c?offer_id=926&aff_id=18085" width="0" height="0" style="position:absolute;visibility:hidden;" border="0" /></li> 
       </ul>
     </section>
   
