--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
             <section aria-label="1" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Process<br>Automations</span>
+                  <span class="service__heading__content__text">Data<br>Automations</span>
                 </span>
               </h3>
-              <p class="service__description">REST APIs & Webhooks</p>
-              <ul aria-label="Processing Automation" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://zapier.com" target="_blank" rel="nofollow"><img style="padding-top: 20px; padding-bottom: 20px" src="img/zapier_logo.png" width="35%"/></a></li>
-                <li class="service__list__item">Building Microservices</li>
+              <p class="service__description">Integrations & Queries</p>
+              <ul aria-label="Data Automation" class="service__list" role="list">
+                <li class="service__list__item"><a href="https://skyvia.com" target="_blank" rel="nofollow"><img style="padding-top: 20px; padding-bottom: 20px" src="img/skyvia.png" width="75%"/></a></li>
+                <li class="service__list__item">Building Pipelines</li>
               </ul>
             </section>
           </div>
@@ -127,7 +127,7 @@
                 </span>
               </h3>
               <p class="service__description">Controllers, Actuators & Sensors</p>
-              <ul aria-label="Controlling Automation" class="service__list" role="list">
+              <ul aria-label="Telemetry Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img style="padding-top: 20px; padding-bottom: 20px" src="img/raspberrypi_logo.svg" width="10%"/></a></li>
                 <li class="service__list__item">Building Internet of Things</li>
               </ul>
@@ -139,13 +139,13 @@
             <section aria-label="2" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">AI<br>Automations</span>
+                  <span class="service__heading__content__text">Prepayment<br>Automations</span>
                 </span>
               </h3>
-              <p class="service__description">ChatGPT, Codex & DALL-E</p>
+              <p class="service__description">Gift Cards/Vouchers</p>
               <ul aria-label="Machine Learning Automation" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://www.openai.com" target="_blank" rel="nofollow"><img src="img/openai_logo.svg" style="padding-top: 20px; padding-bottom: 20px" width="35%"/></br></a></li>
-                <li class="service__list__item">Building Generative Bots</li>
+                <li class="service__list__item"><a href="https://www.giftupapp.com?fpr=1wf68" target="_blank" rel="nofollow"><img src="https://d2gdx5nv84sdx2.cloudfront.net/uploads/3dkzweqw/marketing_asset/banner/3217/Logo_Black_Yellow_White.png" style="padding-top: 20px; padding-bottom: 20px" width="90%"/></br></a></li>
+                <li class="service__list__item">Building Prepaid Experiences</li>
               </ul>
             </section>
           </div>
@@ -234,11 +234,8 @@
       <h2 class="clients__heading" id="clients__heading">Recommended</h2>
       <p class="about__text">Technologies that I like and use. <b class="message" style="color:#7713fe;"></b></p>
       <ul aria-labelledby="clients__heading" class="clients__list" role="list">
-         <li class="clients__list__item"><a href="https://www.giftupapp.com?fpr=1wf68" target="_blank" style="outline:none;border:none;"><img src="https://d2gdx5nv84sdx2.cloudfront.net/uploads/3dkzweqw/marketing_asset/banner/3217/Logo_Black_Yellow_White.png" style=" width:90%" alt="giftupApp" border="0"/></a><p class="project__name">Sell your business' gift cards online with the <a href="https://www.giftupapp.com?fpr=1wf68" target="_blank">GiftUp!</a>.</p></li>
-        <li class="clients__list__item"><a href="https://www.skyvia.com" target="_blank" ><img src="img/skyvia.png" style=" width:110%" alt="skyvia app" border="0"/></a><p class="project__name">ETL tool that allows you to easily sync on premise and cloud data in a convenient interface. No coding required! with <a href="https://www.skyvia.so" target="_blank">Skyvia</a>.</p></li>
-        <li class="clients__list__item"><a href="https://get.surfshark.net/aff_c?offer_id=926&aff_id=18085&file_id=379" target="_blank"><img src="https://media.go2speed.org/brand/files/surfshark/926/Surfshark_pos_96px.png" style=" width:90%" alt="surfsharkVPN" border="0" /></a><p class="project__name">Improve your online security & privacy with the award-winning <a href="https://get.surfshark.net/aff_c?offer_id=926&aff_id=18085&file_id=379" target="_blank">Surfshark VPN</a>.</p><img src="https://get.surfshark.net/aff_c?offer_id=926&aff_id=18085" width="0" height="0" style="position:absolute;visibility:hidden;" border="0" /></li> 
-         <li class="clients__list__item"><a href="https://www.pay.so" target="_blank" ><img src="img/payso_logo.png" style=" width:90%" alt="pay.so crypto" border="0"/></a><p class="project__name">Your clients pay with cryptocurrency. You recieve USD! with the <a href="https://www.pay.so" target="_blank">Pay.so</a>.</p></li>
-      </ul>
+         <li class="clients__list__item"><a href="https://get.surfshark.net/aff_c?offer_id=926&aff_id=18085&file_id=379" target="_blank"><img src="https://media.go2speed.org/brand/files/surfshark/926/Surfshark_pos_96px.png" style=" width:90%" alt="surfsharkVPN" border="0" /></a><p class="project__name">Improve your online security & privacy with the award-winning <a href="https://get.surfshark.net/aff_c?offer_id=926&aff_id=18085&file_id=379" target="_blank">Surfshark VPN</a>.</p><img src="https://get.surfshark.net/aff_c?offer_id=926&aff_id=18085" width="0" height="0" style="position:absolute;visibility:hidden;" border="0" /></li> 
+       </ul>
     </section>
   
     <section aria-labelledby="contact__heading" id="contact">
